ing-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: host-based-routing
  namespace: ingress-nginx
spec:
  controller: k8s.io/ingress-nginx
