ing-controllerdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
  labels:
    name: nginx
    tier: backend
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: nginx/nginx-ingress:latest
          ports:
            - name: http
              containerPort: 80
            # - name: https
            #   containerPort: 443
          args:
            - /nginx-ingress-controller
            - --publish-service=ingress-nginx-controller
          resources:
            limits:
              memory: 248Mi
              cpu: "2"
            requests:
              memory: 128Mi
              cpu: "0.2"
