pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  namespace: ingress-nginx
  labels:
    app: aspnetapp
spec:
  containers:
  - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
    name: aspnetapp-image
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        memory: 28Mi
        cpu: "1"
      requests:
        memory: 28Mi
        cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  namespace: ingress-nginx
spec:
  selector:
    app: aspnetapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: aspnetapp
#   namespace: ingress-nginx
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   ingressClassName: "host-based-routing"
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: aspnetapp
#             port:
#               number: 80
#         pathType: Exact
